--- a/style.css
+++ b/style.css
@@ -95,9 +95,18 @@ input::placeholder {
   display: none;
 }
 
-@media only screen and (max-width: 700px) {
+@media (max-width: 700px) {
   [data-menu="button"] {
-    display: block;
+    display: flex;
+    align-items: center;
+
+    cursor: pointer;
+    background: none;
+    border: none;
+  }
+  [data-menu="button"]::before {
+    content: url("./assets/svg/menu-mobile.svg");
+    background-color: transparent;
   }
   .nossas-lojas,
   .login {
