add toggle drawer

--- a/style.css
+++ b/style.css
@@ -118,14 +118,16 @@ input::placeholder {
     background: none;
     border: none;
   }
+
+  [data-menu="button"]::before {
+    content: url("./assets/svg/menu-mobile.svg");
+    background-color: transparent;
+  }
+
   .header-direito .minicart {
     position: absolute;
     top: 44px;
     right: 6%;
-  }
-  [data-menu="button"]::before {
-    content: url("./assets/svg/menu-mobile.svg");
-    background-color: transparent;
   }
 
   [data-menu="list"] {
@@ -133,15 +135,18 @@ input::placeholder {
     position: absolute;
     flex-direction: column;
     background: #fff;
-    /*  display: none; */
+    display: none;
     left: 2%;
     z-index: 100;
+  }
 
-    /* menu-aberto */
+  /* menu-aberto */
 
+  [data-menu="list"].active {
     margin-left: 16px;
     margin-top: 52px;
-    width: 360px;
+    width: 370px;
+    display: block;
   }
 
   .buckman__li {
