--- a/style.css
+++ b/style.css
@@ -76,20 +76,17 @@ a {
   display: block;
 }
 
-/* [data-dropdown] {
-  position: relative;
-} */
-
 .dropdown-menu {
   position: absolute;
   top: 110px;
+
   background: #fff;
-  /*  border: 1px solid #101820; */
   z-index: 100;
 }
 
 .dropdown-menu li {
   padding-bottom: 20px;
+  padding-left: 5px;
   list-style: none;
 }
 
@@ -223,7 +220,6 @@ button {
     left: 5%;
     z-index: 300;
 
-    cursor: pointer;
     background: none;
     border: none;
   }
@@ -241,7 +237,7 @@ button {
     position: absolute;
     top: 49px;
     left: 5%;
-
+    cursor: pointer;
     top: 0;
     left: 2%;
     z-index: 350;
@@ -281,12 +277,26 @@ button {
     order: 1;
   }
 
+  .dropdown-menu {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    left: 2%;
+    top: 50px;
+  }
+
   [data-menu="list"].active {
     margin-top: 60px;
     width: 95%;
     display: block;
     display: flex;
     padding-inline: 12px;
+  }
+
+  /*  submenus */
+
+  .buckman__li.novidades.active {
+    display: block;
   }
 
   [data-menu="logo"].active,
@@ -313,6 +323,7 @@ button {
     font-weight: 400;
     line-height: 20px;
     font-family: "Montserrat", sans-serif;
+    cursor: pointer;
   }
 
   [data-menu="favoritos"].active {
@@ -327,7 +338,7 @@ button {
     content: "Favoritos";
     font-weight: 400;
     line-height: 20px;
-
+    cursor: pointer;
     font-family: "Montserrat", sans-serif;
   }
 
@@ -344,6 +355,7 @@ button {
     content: "Nossas Lojas";
     font-weight: 400;
     line-height: 20px;
+    cursor: pointer;
 
     font-family: "Montserrat", sans-serif;
   }
@@ -362,6 +374,7 @@ button {
     content: "Fale Conosco";
     font-weight: 400;
     line-height: 20px;
+    cursor: pointer;
 
     font-family: "Montserrat", sans-serif;
   }
@@ -380,6 +393,7 @@ button {
     content: "Entrar";
     font-weight: 400;
     line-height: 20px;
+    cursor: pointer;
 
     font-family: "Montserrat", sans-serif;
   }
@@ -401,6 +415,7 @@ button {
   }
   .buckman__li::after {
     content: url(./assets/svg/arrow.svg);
+    cursor: pointer;
   }
 
   .line-mobile {
