altera menu mobile

--- a/style.css
+++ b/style.css
@@ -86,7 +86,6 @@ body {
 .dropdown-menu {
   position: absolute;
   top: 110px;
-
   background: #fff;
   z-index: 100;
 }
@@ -280,9 +279,8 @@ button {
   }
 
   .dropdown-menu {
-    position: absolute;
     width: 100%;
-    height: 100vh;
+    position: static;
     left: 2%;
     top: 50px;
   }
