--- a/style.css
+++ b/style.css
@@ -416,7 +416,7 @@ button {
     justify-content: space-between;
     animation: slide-right 0.5s ease-in-out 0.2s both;
   }
-  .buckman__li::after {
+  .menu-dropdown::after {
     content: url(./assets/svg/arrow.svg);
     cursor: pointer;
     position: absolute;
